kubernetes/apps/gaia/network/gateway/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-to-https
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: http
  hostnames:
    - ${domain}
    - "*.${domain}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
